# wagtail-compose

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  cmd  cmd-container-template  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.travis  install.sh  shell.sh  start-demon.sh  start.sh
project/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  cmd  cmdp  pyproject.toml  requirements.txt
project/airflow/: Dockerfile  config_django.py
project/airflow/dags/: hello_word.py  test_dependency.py
project/ansible/: .key  config-project.yml  inventory
project/ansible/group_vars/all/: vars.yml
project/ansible/group_vars/develop/: vars.yml  vault.yml
project/ansible/group_vars/production/: vars.yml  vault.yml
project/ansible/group_vars/qa/: vars.yml  vault.yml
project/ansible/host_vars/: localhost
project/ansible/roles/ansible-role-docker/tasks/: main.yml
project/ansible/roles/ansible-role-project/handlers/: main.yml
project/conf_server/: app.conf  project.supervisor.conf  project_start  project_websocket_start
project/config/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
project/docker_bin/: airflow-flower  airflow-queue_q2  airflow-server  create-admin
project/locale/en/LC_MESSAGES/: django.po
project/locale/es/LC_MESSAGES/: django.po
project/scripts/: entrypoint.sh
project/ses/: apps.py  routing.py  signals.py  urls.py  views.py
project/ses/consumers/: __init__.py  ses_consumers.py
project/ses/msgs/: __init__.py
project/utils/color_logging/: __init__.py  settings.py
(+61 files in other folders)
